Thu Jun 30 12:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Any/Recursive/client.cpp:
          Added include of TypeCodeFactory_Loader.h so that the
          TypeCodeFactory is loaded. Fixes crashing of the test on
          windows

Thu Jun 30 11:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/catior.cpp:
          Fixed retrieval and printing of port number in
          cat_tag_alternate_endpoints.

Wed Jun 29 20:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Naming_Client.h:
          Added include of naming_client.h

Wed Jun 29 20:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IOR_Parser.h:
          Emulated exception macro fix

Wed Jun 29 12:02:36 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Invocation_Base.cpp:

	  Moved "PortableInterceptor.h" include directive out of
	  TAO_HAS_INTERCEPTORS preprocessor block.  It should always be
	  visible.  Fixes errors in builds with interceptors disabled.

Wed Jun 29 18:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/catior.cpp:
          Added an extra identation for priority and priority model so that it
          is clear they belong to a certain priority and added
          PRIORITY_BANDED_CONNECTION_POLICY_TYPE as one of the types we
          recognize.

Wed Jun 29 10:13:54 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/BasicLogFactory_i.h:

	  Change type of orb_ member variable from _ptr to _var.

Wed Jun 29 10:00:31 2005  Gary Maxey <gary.maxey@hp.com>

        * TAO/tao/Valuetype/StringValueC.inl

          Change to avoid compiler warnings from some compilers.

Wed Jun 29 07:22:38 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* TAO_IDL/Makefile.am:
	* orbsvcs/FT_ReplicationManager/Makefile.am:
	* orbsvcs/ImplRepo_Service/Makefile.am:

	  Regenerated.

	* TAO_IDL/tao_idl.mpc: