@@ -39,7 +39,7 @@
 #endif /* __BORLANDC__ */
 
 // TAO_IDL - Generated from
-// be\be_visitor_arg_traits.cpp:69
+// be\be_visitor_arg_traits.cpp:70
 
 // Arg traits specializations.
 namespace TAO
@@ -112,15 +112,9 @@ PortableInterceptor::IORInfo::_narrow (
     ACE_ENV_ARG_DECL_NOT_USED
   )
 {
-  if (CORBA::is_nil (_tao_objref))
-    {
-      return IORInfo::_nil ();
-    }
-  
-  IORInfo_ptr proxy =
-    dynamic_cast<IORInfo_ptr> (_tao_objref);
-  
-  return IORInfo::_duplicate (proxy);
+  return IORInfo::_duplicate (
+      dynamic_cast<IORInfo_ptr> (_tao_objref)
+    );
 }
 
 PortableInterceptor::IORInfo_ptr
@@ -129,15 +123,9 @@ PortableInterceptor::IORInfo::_unchecked_narrow (
     ACE_ENV_ARG_DECL_NOT_USED
   )
 {
-  if (CORBA::is_nil (_tao_objref))
-    {
-      return IORInfo::_nil ();
-    }
-  
-  IORInfo_ptr proxy =
-    dynamic_cast<IORInfo_ptr> (_tao_objref);
-  
-  return IORInfo::_duplicate (proxy);
+  return IORInfo::_duplicate (
+      dynamic_cast<IORInfo_ptr> (_tao_objref)
+    );
 }
 
 PortableInterceptor::IORInfo_ptr
